{modified} modified index to include navbar and others

--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>sudosmile</title>
+    <link rel="icon" type="image/png" href="#"/>
+    <link rel="stylesheet" type="text/css" href="#"/>
+    <script type="text/javascript" src="#"></script>
 </head>
 <body>
+    <nav>
+        <a href="#"><img src="#" alt="About"></a>
+        <a href="#"><img src="#" alt="Contact"></a>
+    </nav>
+    <div class="quote">
+        <h1>"The best programs are written so that computing machines can perform them quickly and so that human beings can understand them clearly."</h1>
+        <p>damn he's good</p>
+    </div>
 </body>
 </html>
