{modified} quote div

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
         <a href="#"><img src="#" alt="About"></a>
         <a href="#"><img src="#" alt="Contact"></a>
     </nav>
-    <h1>hello world</h1>
     <div class="quote">
-        <h1>"The best programs are written so that computing machines can perform them quickly and so that human beings can understand them clearly."</h1>
-        <p>damn he's good</p>
+        <p>"The best programs are written so that computing machines can perform them quickly and so that human beings can understand them clearly."</p>
     </div>
 </body>
 </html>
