--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>sudosmile</title>
     <link rel="icon" type="image/png" href="#"/>
-    <link rel="stylesheet" type="text/css" href="#"/>
+    <link rel="stylesheet" type="text/css" href="css/master.css"/>
     <script type="text/javascript" src="#"></script>
 </head>
 <body>
     <nav>
-        <a href="#"><img src="#" alt="About"></a>
-        <a href="#"><img src="#" alt="Contact"></a>
+        <a class="item" href="#"><img src="#" alt="About"></a>
+        <a class="item" href="#"><img src="#" alt="Contact"></a>
     </nav>
     <div class="quote">
         <p>"The best programs are written so that computing machines can perform them quickly and so that human beings can understand them clearly."</p>
